--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <title>Single Price Grid Component</title>
 </head>
+
 <body>
     <div class="container">
         <div class="item-a">
             <h2>Join our community</h2>
             <h3>30-day, hassle-free money back guarantee</h3>
-            <p>Gain access to our full libray of tutorials along with expert code reviews, Perfect for any developers who are serious about honing their skills.</p>
+            <p>Gain access to our full library of tutorials along with expert code reviews, Perfect for any developers who are serious about honing their skills.</p>
         </div>
         <div class="item-b">
             <h2>Monthly Subscription</h2>
